add database connection with unittest

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -8,6 +8,7 @@ PASSWORD: p@ssw0rd
 HOST: 127.0.0.1
 PORT: 5432
 DB: my_database
+DRIVER_NAME: ODBC Driver 17 for SQL Server
 
 [REDIS]
 HOST: 127.0.0.1
