--- a/resources/config.ini
+++ b/resources/config.ini
@@ -3,11 +3,11 @@ ENVIRONMENT = development
 DEBUG = False
 
 [DATABASE]
-USERNAME: root
-PASSWORD: p@ssw0rd
-HOST: 127.0.0.1
-PORT: 5432
-DB: my_database
+USERNAME: sa
+PASSWORD: fRf_m638
+HOST: 5.79.123.17
+PORT: 1433
+DB: KnowHow
 DRIVER_NAME: ODBC Driver 17 for SQL Server
 
 [REDIS]
