--- a/resources/config.ini
+++ b/resources/config.ini
@@ -4,8 +4,8 @@ DEBUG = False
 
 [DATABASE]
 USERNAME: sa
-PASSWORD: fRf_m638
-HOST: 5.79.123.17
+PASSWORD: 00f_m638
+HOST: 5.79.13.17
 PORT: 1433
 DB: KnowHow
 DRIVER_NAME: ODBC Driver 17 for SQL Server
