add cloudinary support in the asset

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -20,6 +20,6 @@ ERRORS: logs/errors.log
 INFO: data/info.log
 
 [CLOUDINARY]
-CLOUD_NAME: static
-API_KEY: templates
-API_SECRET: hello
+CLOUD_NAME: dnbcbz9eu
+API_KEY: 143739713157669
+API_SECRET: ECHWNG2Vd2316OqW2k7pUIRnQ4A
