--- a/resources/config.ini
+++ b/resources/config.ini
@@ -13,7 +13,7 @@ DRIVER_NAME: ODBC Driver 17 for SQL Server
 [REDIS]
 HOST: 127.0.0.1
 PORT: 6379
-PASSWORD : abc
+PASSWORD : 123456
 
 [LOGS]
 ERRORS: logs/errors.log
