--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 ## Configuration
-configparser=3.8.2
+configparser==3.8.2
 
 ## Database Connectivity
-pyodbc=4.0.22
-sqlalchemy=1.2.1
+pyodbc==4.0.22
+sqlalchemy==1.2.1
 
 ## Cache
-redis=3.4.0
+redis==3.4.0
 
 ## Test Dependencies
-unittest=25.3.1
+unittest==25.3.1
 
 ## Asset Management
-cloudinary=1.20.0
+cloudinary==1.20.0
 
 ## Python Environment
 pip==20.0.2
 
 ## Others
-opencv=3.4.2
-numpy=1.14.2
+opencv==3.4.2
+numpy==1.14.2
