--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,14 @@ sqlalchemy==1.2.1
 redis==3.4.0
 
 ## Test Dependencies
-unittest==25.3.1
+#unittest==0.0.0
 
 ## Asset Management
 cloudinary==1.20.0
 
 ## Python Environment
-pip==20.0.2
+##pip==20.0.2
 
 ## Others
-opencv==3.4.2
 numpy==1.14.2
+opencv==3.4.2
