Update and Add new configuration section

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,6 +1,7 @@
 [APP]
 ENVIRONMENT = development
 DEBUG = False
+DATABASE = MSSQLSERVER
 
 [DATABASE]
 USERNAME: sa
@@ -10,7 +11,7 @@ PORT: 1433
 DB: KnowHow
 DRIVER_NAME: ODBC Driver 17 for SQL Server
 
-[REDIS]
+[CACHE]
 HOST: 127.0.0.1
 PORT: 6379
 PASSWORD : 123456
@@ -19,7 +20,7 @@ PASSWORD : 123456
 ERRORS: logs/errors.log
 INFO: data/info.log
 
-[CLOUDINARY]
+[FILESTORAGE]
 CLOUD_NAME: dnbcbz9eu
 API_KEY: 143739713157669
 API_SECRET: ECHWNG2Vd2316OqW2k7pUIRnQ4A
